--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
             "destination": "/contact.html"
         },
         {
-            "source": "/",
+            "source": "/home",
             "destination": "/index.html"
         },
         {
